Added readme and dist for publishing to npm

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"name": "cli-todo",
 	"version": "0.0.0",
 	"license": "MIT",
-	"bin": "dist/todo.js",
+	"bin": {
+		"todo": "dist/todo.js"
+	},
 	"engines": {
 		"node": ">=10"
 	},
